update public dataset

--- a/notebooks/matsam_metric.ipynb
+++ b/notebooks/matsam_metric.ipynb
@@ -78,7 +78,10 @@
    "source": [
     "\"\"\"\n",
     "    Dataset NBS-2\n",
-    "    \n",
+    "    Paper: Microstructure segmentation with deep learning encoders pretrained on a large microscopy dataset\n",
+    "    Origin dataset name: Ni-superalloys-Super2\n",
+    "    Data&Code: https://github.com/nasa/pretrained-microscopy-models\n",
+    "    DOI: https://doi.org/10.1038/s41524-022-00878-5\n",
     "\"\"\"\n",
     "\n",
     "dataset_path = '../dataset/nbs2/'\n",
@@ -230,6 +233,10 @@
    "source": [
     "\"\"\"\n",
     "    Dataset NBS-3\n",
+    "    Paper: Microstructure segmentation with deep learning encoders pretrained on a large microscopy dataset\n",
+    "    Origin dataset name: Ni-superalloys-Super4\n",
+    "    Data&Code: https://github.com/nasa/pretrained-microscopy-models\n",
+    "    DOI: https://doi.org/10.1038/s41524-022-00878-5\n",
     "\"\"\"\n",
     "\n",
     "dataset_path = '../dataset/nbs3/'\n",
@@ -382,6 +389,10 @@
    "source": [
     "\"\"\"\n",
     "    Dataset AZA\n",
+    "    Paper: Optimizing convolutional neural networks to perform semantic segmentation on large materials imaging datasets: X-ray tomography and serial sectioning\n",
+    "    Origin dataset name: XCT-Al-Zn-alloy\n",
+    "    Data&Code: https://doi.org/10.18126/M2RM08\n",
+    "    DOI: https://doi.org/10.1016/j.matchar.2020.110119\n",
     "\"\"\"\n",
     "\n",
     "dataset_path = '../dataset/aza/'\n",
@@ -531,6 +542,10 @@
    "source": [
     "\"\"\"\n",
     "    Dataset UHCS\n",
+    "    Paper: Optimizing convolutional neural networks to perform semantic segmentation on large materials imaging datasets: X-ray tomography and serial sectioning\n",
+    "    Origin dataset name: Ultrahigh-carbon-steel\n",
+    "    Data&Code: https://github.com/iai-postech/OpenSource/tree/main/weakly_supervised_microstructure_segmentation\n",
+    "    DOI: https://doi.org/10.1016/j.actamat.2023.119086\n",
     "\"\"\"\n",
     "\n",
     "dataset_path = '../dataset/uhcs/'\n",
